// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inbox Placement Reducer get all inbox placement test messages fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getAllMessagesError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "getAllMessagesPending": false,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get all inbox placement test messages pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getAllMessagesError": null,
  "getAllMessagesPending": true,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get all inbox placement test messages success 1`] = `
Object {
  "allMessages": Object {
    "fakeData": true,
  },
  "currentTestDetails": Object {},
  "getAllMessagesError": null,
  "getAllMessagesPending": false,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get inbox placement trends fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTrendsError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "getTrendsPending": false,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get inbox placement trends filter values fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTrendsFilterValuesError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "getTrendsFilterValuesPending": false,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get inbox placement trends filter values pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTrendsFilterValuesError": null,
  "getTrendsFilterValuesPending": true,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get inbox placement trends filter values success 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTrendsFilterValuesError": null,
  "getTrendsFilterValuesPending": false,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
  "trendsFilterValues": Array [
    Object {
      "fakeData": true,
    },
  ],
}
`;

exports[`Inbox Placement Reducer get inbox placement trends pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTrendsError": null,
  "getTrendsPending": true,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get inbox placement trends success 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTrendsError": null,
  "getTrendsPending": false,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [
    Object {
      "fakeData": true,
    },
  ],
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test content pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTestContentError": null,
  "getTestContentPending": true,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test content pending fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTestContentError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "getTestContentPending": false,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test content success 1`] = `
Object {
  "allMessages": Array [],
  "currentTestContent": Object {
    "fakeData": true,
  },
  "currentTestDetails": Object {},
  "getTestContentError": null,
  "getTestContentPending": false,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test messages fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "messagesById": Object {
    "101": Object {
      "status": "error",
    },
  },
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test messages pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "messagesById": Object {
    "101": Object {
      "status": "loading",
    },
  },
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test messages success 1`] = `
Object {
  "allMessages": Array [
    Object {
      "id": 1,
    },
  ],
  "currentTestDetails": Object {},
  "messagesById": Object {
    "1": Object {
      "headers": "fake headers",
      "id": 1,
      "status": "loaded",
    },
  },
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTestError": null,
  "getTestPending": true,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test pending fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "getTestError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "getTestPending": false,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test success 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {
    "fakeData": true,
  },
  "getTestError": null,
  "getTestPending": false,
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer list seeds fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsError": undefined,
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer list seeds pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsError": null,
  "seedsPending": true,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer list seeds success 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": undefined,
  "seedsError": null,
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer list tests fail 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "testsPending": false,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer list tests pending 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsError": null,
  "testsPending": true,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer list tests success 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Object {
    "fakeData": true,
  },
  "testsError": null,
  "testsPending": false,
  "trends": Array [],
}
`;

exports[`Inbox Placement Reducer resets State 1`] = `
Object {
  "allMessages": Array [],
  "currentTestDetails": Object {},
  "messagesById": Object {},
  "placementsByProvider": Array [],
  "placementsByRegion": Array [],
  "placementsBySendingIp": Array [],
  "seeds": Array [],
  "seedsPending": false,
  "stopTestPending": false,
  "tests": Array [],
  "testsPending": true,
  "trends": Array [],
}
`;
